# MRE

./: .auto-changelog  .cursorrules  .dockerignore  .editorconfig  .gitignore  .npmrc  .prettierignore  .prettierrc  .versionrc.json  AGENTS.md  Dockerfile  README.md  commitlint.config.js  dc  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  temp-query-classes.ts  tsconfig.json  vitest.config.ts
ingestion/: .dockerignore  .gitignore  Dockerfile  PARSER_IMPLEMENTATION_STATUS.md  README.md  __init__.py  crontab  main.py  pyproject.toml  pytest.ini  qp_debug.html  requirements-test.txt  requirements.txt
ingestion/api/: admin_settings.py  app.py  job_queue.py  jobs.py  routes.py
ingestion/cli/: __init__.py  __main__.py  commands.py
ingestion/common/: country_lookup.py  liverc_race_times.py  logging.py  metrics.py  race_vehicle_normalization.py  settings.py  settings_registry.py  site_policy.py  site_policy_merge.py  tracing.py
ingestion/connectors/: __init__.py
ingestion/db/: advisory_lock.py  models.py  repository.py  session.py
ingestion/ingestion/: __init__.py  auto_confirm.py  driver_deduplication.py  driver_matcher.py  errors.py  infer_vehicle_type.py  lock_conflict.py  normalizer.py  pipeline.py  pit_stop_detection.py  practice_driver_identity.py  recent_events.py  state_machine.py  validator.py
ingestion/reports/: __init__.py  track_sync_report.py
ingestion/scripts/: build_f1_telemetry_fixtures.py  build_multi_lap_full_telemetry_fixtures.py  (+7 more)
(+1429 files in other folders)
